# take5bot

./: .gitignore  LICENSE  PROJECT_SUMMARY.md  README.md  check_training.py  monitor_training.py  play_take5.py  pyproject.toml  simple_monitor.py  train_monitored.py  train_take5.py  train_with_hooks.py  training_hooks.py  verify_setup.py
.github/workflows/: ci.yml  deploy-pages.yml
take5bot/: __init__.py  openspiel_take5.py  take5_env.py  take5_muzero_config.py  take5_unizero_config.py  test_openspiel_take5.py
web/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css
